# butter-fork

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  butterfork-design.md
.claude/: settings.json
.github/workflows/: ci.yml
bf/: Cargo.toml
bf-agent/: Cargo.toml
bf-agent-ollama/: Cargo.toml
bf-agent-ollama/src/: main.rs
bf-agent/src/: main.rs
bf-bootstrap/: Cargo.toml
bf-bootstrap/src/: main.rs
bf-build/: Cargo.toml
bf-build-cargo/: Cargo.toml
bf-build-cargo/src/: main.rs
bf-build-cargo/tests/: build_integration.rs
bf-build-cmake/: Cargo.toml
bf-build-cmake/src/: main.rs
bf-build-meson/: Cargo.toml
bf-build-meson/src/: main.rs
bf-build-npm/: Cargo.toml
bf-build-npm/src/: main.rs
bf-build/src/: main.rs
bf-catalog/: Cargo.toml
bf-catalog/src/: main.rs
bf-common/: Cargo.toml
bf-common/src/: lib.rs
bf-daemon/: Cargo.toml
bf-daemon/src/: main.rs
bf-fat/: Cargo.toml
bf-fat/src/: main.rs
bf-forge/: Cargo.toml
bf-forge-github/: Cargo.toml
bf-forge-github/src/: main.rs
bf-forge-gitlab/: Cargo.toml
bf-forge-gitlab/src/: main.rs
bf-forge/src/: main.rs
bf-index/: Cargo.toml
bf-index/src/: main.rs
bf-install/: Cargo.toml
bf-install/src/: main.rs
bf-install/tests/: install_integration.rs
bf-sandbox/: Cargo.toml
bf-sandbox/src/: main.rs
bf-scaffold/: Cargo.toml
bf-scaffold/src/: main.rs
bf/src/: main.rs
butterfork-ui/: package.json
butterfork-ui/frontend/: index.html
butterfork-ui/src-tauri/: Cargo.toml  tauri.conf.json
butterfork-ui/src-tauri/src/: lib.rs  main.rs
docs/: howto-godot.md  howto-qiskit.md  pr-policy.md  schema.md
rfcs/: README.md
scripts/: fat-install.sh  install.sh  rollback.sh  setup-path.sh
