[workspace]
resolver = "2"
members = [
    "bf",
    "bf-agent",
    "bf-agent-ollama",
    "bf-bootstrap",
    "bf-build",
    "bf-build-cargo",
    "bf-build-cmake",
    "bf-build-meson",
    "bf-build-npm",
    "bf-catalog",
    "bf-common",
    "bf-daemon",
    "bf-fat",
    "bf-forge",
    "bf-forge-github",
    "bf-forge-gitlab",
    "bf-index",
    "bf-install",
    "bf-sandbox",
    "bf-scaffold",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/matthewscottconroy/butter-fork"
authors = ["Matthew Scott Conroy <msconroyster@gmail.com>"]

[workspace.dependencies]
tempfile = "3"
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
thiserror = "1"
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP client (used by bf-agent for Claude API)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
# TOML parsing (used by bf-sandbox profile loading)
toml = "0.8"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Internal
bf-common = { path = "bf-common" }
