[package]
name = "bf-agent-ollama"
description = "Ollama agent backend for bf-agent: proves the backend is swappable"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-agent-ollama"
path = "src/main.rs"

[lib]
name = "bf_agent_ollama"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
bf-common = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
