[package]
name = "bf-agent"
description = "LLM tool-use loop: reads a prompt and tool manifest, streams NDJSON events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-agent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
bf-common = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
