[package]
name = "bf-bootstrap"
description = "Minimal bootstrap binary: forks, builds, and installs Butterfork from source"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-bootstrap"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }
