[package]
name = "bf-build-cargo"
description = "Cargo build adapter for bf-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-build-cargo"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }

[lib]
name = "bf_build_cargo"
path = "src/main.rs"
