[package]
name = "bf-build-cmake"
description = "CMake build adapter for bf-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-build-cmake"
path = "src/main.rs"

[lib]
name = "bf_build_cmake"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
