[package]
name = "bf-build-npm"
description = "npm/pnpm build adapter for bf-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-build-npm"
path = "src/main.rs"

[lib]
name = "bf_build_npm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
