[package]
name = "bf-build"
description = "Build system detection, planning, and execution dispatcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-build"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }

[lib]
name = "bf_build"
path = "src/main.rs"
