[package]
name = "bf-catalog"
description = "OSS project catalog: search, discover, and manage project entries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-catalog"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }

[lib]
name = "bf_catalog"
path = "src/main.rs"
