[package]
name = "bf-daemon"
description = "Optional supervisor for long-running builds, agent sessions, and PR watchers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-daemon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }
