[package]
name = "bf-forge-github"
description = "GitHub backend for bf-forge: thin wrapper over the gh CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-forge-github"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bf-common = { workspace = true }

[lib]
name = "bf_forge_github"
path = "src/main.rs"
