[package]
name = "bf-forge-gitlab"
description = "GitLab backend for bf-forge: thin wrapper over the glab CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-forge-gitlab"
path = "src/main.rs"

[lib]
name = "bf_forge_gitlab"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }
