[package]
name = "bf-index"
description = "Incremental codebase index: symbol, grep, and semantic queries via tree-sitter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-index"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }

[lib]
name = "bf_index"
path = "src/main.rs"
