[package]
name = "bf-install"
description = "Generational install manager: add, activate, rollback, and garbage-collect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-install"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }
