[package]
name = "bf-sandbox"
description = "Sandboxed command execution using named profiles (bubblewrap/container backend)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-sandbox"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bf-common = { workspace = true }
