[package]
name = "bf-scaffold"
description = "Turn an idea into a buildable project seed (hello-world, poc, or design-doc)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "bf-scaffold"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bf-common = { workspace = true }

[lib]
name = "bf_scaffold"
path = "src/main.rs"
