[package]
name = "butterfork-ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/matthewscottconroy/butter-fork"
authors = ["Matthew Scott Conroy <msconroyster@gmail.com>"]
description = "Butterfork desktop UI — catalog, install progress, PR tracking"

# Prevents additional console window on Windows in release.
[profile.release]
panic = "abort"
codegen-units = 1

[lib]
name = "butterfork_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "butterfork-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
